src/test/ui/borrowck/borrowck-storage-dead.stderr
error[E0381]: use of possibly uninitialized variable: `x`
  --> $DIR/borrowck-storage-dead.rs:16:17
   |
LL |         let _ = x + 1;
   |                 ^ use of possibly uninitialized `x`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0381`.
